# L-Slash

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
protos/: crate_mapping.txt  generated.rs  record.u.pb.rs  session.u.pb.rs  user.u.pb.rs
src/: app.rs  lib.rs  main.rs  state.rs
src/_server/: auth.rs  server.rs
src/cli/: commands.rs  flags.rs  main.rs
src/doc/: Login.md
src/protos/: record.proto  session.proto  test.proto  user.proto
src/server/: auth.rs  server.rs
src/services/: auth.rs  mod.rs  result.rs  url.rs  user.rs
src/storage/: mod.rs  record_store.rs  sled_store.rs
src/web/: error.rs  mod.rs  routes.rs
src/web/handlers/: get_form_html.inc  http.rs  mod.rs
src/web/handlers/template/: form_html.template  get_form_html.template  login_form_html.template
src/web/middleware/: auth_cookie.rs  mod.rs
