[package]
name = "l_slash"
default-run = "l_slash"
version = "0.1.0"
authors = ["vichare <vicharewang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
clap = { version = "4.0", features = ["derive"] }
# anyhow = "1.0"
anyhow = { version = "1.0", default-features = false }

sha2 = "0.10"
base64 = "0.21"
rand = "0.8.5"
chrono = "0.4"

# Http server
actix-files = "0.6"
actix-web = { version = "4", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }

url = "2.x"
serde = { version = "1.x", features = ["derive"] }

# Storage
sled = "0.34.7"


[build-dependencies]
protobuf-codegen = "3.2.0"

[[bin]]
name = "cli"
path = "src/cli/main.rs"
