[package]
name = "l_slash"
default-run = "l_slash"
version = "0.1.0"
authors = ["vichare <vicharewang@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# anyhow = "1.0"
anyhow = { version = "1.0", default-features = false }
thiserror = "2.0"

sha2 = "0.10"
base64 = "0.22"
rand = "0.9.2"
chrono = "0.4"

# Http server
actix-files = "0.6"
actix-web = { version = "4", features = ["cookies"] }
actix-session = { version = "0.11", features = ["cookie-session"] }

url = "2"
serde = { version = "1", features = ["derive"] }

# Storage
sled = "0.34.7"


[[bin]]
name = "cli"
path = "src/cli/main.rs"

[build-dependencies.protobuf-codegen]
package = "protobuf-codegen"
version = "4.33.1-release"

[build-dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.1-release"

[dependencies.protobuf]
package = "protobuf"
version = "4.33.1-release"

[dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.1-release"
