[package]
name = "l_slash"
default-run = "l_slash"
version = "0.2.0"
authors = ["vichare <vicharewang@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

sha2 = "0.10"
base64 = "0.22"
rand = "0.9.2"
chrono = "0.4"

# Http server
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6.7", features = ["fs", "trace"] }

tracing = "0.1.43"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"

# Storage
sled = "0.34.7"
anyhow = "1.0.100"


[[bin]]
name = "cli"
path = "src/cli/main.rs"

[build-dependencies.protobuf-codegen]
package = "protobuf-codegen"
version = "4.33.1-release"

[build-dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.1-release"

[dependencies.protobuf]
package = "protobuf"
version = "4.33.1-release"

[dependencies.protobuf_well_known_types]
package = "protobuf-well-known-types"
version = "4.33.1-release"
